updated post form views

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,9 @@
 
  @import "bootstrap";
  @import "rails_bootstrap_forms";
+
+ .div-centered {
+    text-align: left; 
+    margin: auto; 
+    width: 200px;
+  }
