--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,14 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light" style="background-color: #e3f2fd; padding: 10px 40px 10px 40px;">
       <a class="navbar-brand" href="#">
-        <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-        Bootstrap
+        <img src="https://static.thenounproject.com/png/1462270-200.png" width="45" height="45" class="d-inline-block align-top" alt="">
+        Members Only
       </a>
+    <a>
+      <%= link_to 'New Post', new_post_path, class: "btn btn-secondary bg-info my-2 my-sm-0" %>
+    </a>
     </nav>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
