--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,10 @@
         <img src="https://static.thenounproject.com/png/1462270-200.png" width="45" height="45" class="d-inline-block align-top" alt="">
         Members Only
       </a>
-    <a>
-      <%= link_to 'New Post', new_post_path, class: "btn btn-secondary bg-info my-2 my-sm-0" %>
-    </a>
+      <div class="btn-group" role="group">
+        <%= link_to 'New Post', new_post_path, class: "btn btn-secondary text-light my-2 my-sm-0" %>
+        <button class="btn btn-secondary text-light my-2 my-sm-0">Sign Up</button>
+      </div>
     </nav>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
